# py-utils

./: .gitignore  pyproject.toml
.secret/: config.json
py_utils/: core.py
py_utils/aws/: core.py  ses.py
tests/: test_core.py
tests/aws/: test_ses.py
