[tool.poetry]
name = "py-utils"
version = "0.1.0"
description = ""
authors = ["Andy Crowe <crowemi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = {extras = ["ses"], version = "^1.34.86"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
